# type_infer

./: .buildinfo  .gitignore  CONTRIBUTING.md  README.md  __init__.py  api.html  base.html  dtype.html  genindex.html  helpers.html  index.html  infer.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: ci.yml  cla.yml
.github/workflows/: docs.yml  python-package.yml
_modules/: base.html  dtype.html  helpers.html  index.html  infer.html
_sources/: api.rst.txt  dtype.rst.txt  index.rst.txt  infer.rst.txt
docssrc/: Makefile  README.md
docssrc/source/: base.rst  conf.py  helpers.rst  index.rst
tests/: test_type_infer.py
tests/data/: airline_sentiment_sample.csv  stack_overflow_survey_sample.csv
tests/integration_tests/: test_rule_based.py  test_type_infer.py
tests/unit_tests/: test_dates.py  test_helpers.py  test_infer_dtypes.py  test_misc.py  tests_old.py
tests/unit_tests/rule_based/: test_dates.py  test_infer_dtypes.py  test_misc.py
type_infer/: __init__.py  api.py  base.py  column_types.py  dtype.py  helpers.py  infer.py  type_inspector.py
type_infer/bert/: infer.py
type_infer/engines/: base.py
type_infer/rule_based/: core.py  helpers.py  infer.py
