[tool.poetry]
name = "type_infer"
version = "0.0.11"
description = "Automated type inference for Machine Learning pipelines."
authors = ["MindsDB Inc. <hello@mindsdb.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "type_infer"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
python-dateutil = "^2.1"
scipy = "^1"
numpy = "^1.15"
pandas = "^1"
dataclasses-json = "^0.5.4"
colorlog = "^6.5.0"
langid = "^1.1.6"
nltk = "^3"
toml = "^0.10.2"
psutil = "^5.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
