[tool.poetry]
name = "type_infer"
version = "0.0.18"
description = "Automated type inference for Machine Learning pipelines."
authors = ["MindsDB Inc. <hello@mindsdb.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "type_infer"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
python-dateutil = "^2.1"
scipy = "^1"
numpy = "^1.15"
pandas = "^2"
dataclasses-json = "^0.6.3"
colorlog = "^6.5.0"
psutil = "^5.9.0"

[tool.poetry.group.rule_based.dependencies]
langid = "^1.1.6"
nltk = "^3"

[tool.poetry.group.test.dependencies]
toml = "^0.10.2"

# TODO: update once this engine is introduced
# [tool.poetry.group.bert]
# optional = true
# [tool.poetry.group.bert.dependencies]
# torch

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
