[tool.poetry]
name = "type_infer"
version = "0.0.19"
description = "Automated type inference for Machine Learning pipelines."
authors = ["MindsDB Inc. <hello@mindsdb.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "type_infer"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
python-dateutil = "^2.1"
scipy = "^1"
numpy = "^1.15"
pandas = "^2"
dataclasses-json = "^0.6.3"
colorlog = "^6.5.0"
psutil = "^5.9.0"
toml = "^0.10.2"

# rule based deps, part of core
py3langid = ">=0.2.2,<0.3"
nltk = "^3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# TODO: update once this engine is introduced
[tool.poetry.extras]
# bert = ["torch"]
